# coding-music-agent

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml
.claude/: CLAUDE.md
apps/desktop/: index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
apps/desktop/src/: config.ts  vite-env.d.ts
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/app/: App.tsx  main.tsx
apps/desktop/src/clients/: agentSSE.ts  audioPlayer.ts  musicClient.ts  sessionClient.ts  sidecarLauncher.ts
apps/desktop/src/config/: moodOptions.tsx
apps/desktop/src/hooks/: useKeyboardShortcuts.ts  useSidecarHealth.ts
apps/desktop/src/stores/: agentStore.ts  contextStore.ts  musicStore.ts  sessionStore.ts  settingsStore.ts  sidecarStore.ts  uiAtmosphereStore.ts
apps/desktop/src/styles/: global.css  layout.module.css  markdown.module.css
apps/desktop/src/utils/: colorUtils.ts  debugLogger.ts
apps/sidecar/: package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/sidecar/src/: index.ts
apps/sidecar/src/agent/: service.ts
apps/sidecar/src/context/: service.ts
apps/sidecar/src/music/: features.ts  netease.ts  provider.ts  service.ts
apps/sidecar/src/permission/: service.ts
apps/sidecar/src/preference/: history.ts  service.ts
apps/sidecar/src/recommendation/: collaborative.ts  mood.ts  (+1 more)
docs/: music-recommendation-logic.md  sidecar-packaging.md
scripts/: build-sidecar.sh  update-version.sh
(+35 files in other folders)
